Feat(hotcode):Backend novas atribuicoes de escala e permutas
